# first-break-picking-test-task

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/first_break_picking/algorithms/ann/: env.py  training.py
src/first_break_picking/algorithms/ann/datasets/: dataset.py
src/first_break_picking/algorithms/ann/models/: device.py  model.py  weights_init.py
src/first_break_picking/algorithms/ann/trainers/: trainer.py  utils.py
src/first_break_picking/algorithms/sta_lta/notebooks/: sta_lta.ipynb
src/first_break_picking/preprocessing/: load_data.py
src/first_break_picking/preprocessing/notebooks/: load_prepare_and_show.ipynb
